@@ -38,5 +38,5 @@ concentrationGraph=Concentration Graph
 concentrationGraph.yAxis=Equilibrium Concentration (mol/L)
 negligible=negligible
 pHColorKey=pH Color Key
-neither=neither
+liquid=Liquid
 views=Views
